# matrix

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
app/: helpers.py  main.py  utils.py
app/tests/: conftest.py  test_connection.py  test_create_matrix_from_bytes.py  test_get_byte_matrix.py
